[gd_scene load_steps=17 format=3 uid="uid://bne1cb4ygidfj"]

[ext_resource type="Script" path="res://scripts/overworld/overworld_touch_controls.gd" id="1_u8cae"]
[ext_resource type="Texture2D" uid="uid://cxxt4mrq1k1jy" path="res://graphics/ui/touch_ui_icons/run_toggle_icon_run.png" id="2_q588r"]
[ext_resource type="Texture2D" uid="uid://copnjmfswsin0" path="res://graphics/ui/touch_ui_icons/pause_icon.png" id="3_12oi1"]
[ext_resource type="AudioStream" uid="uid://b24gjdohf73u2" path="res://audio/sfx/menu.ogg" id="4_i4ml8"]
[ext_resource type="Texture2D" uid="uid://btyf2cpk0mbbr" path="res://graphics/ui/touch_ui_icons/inventory_icon.png" id="4_v8w2s"]
[ext_resource type="Texture2D" uid="uid://22hp4pirngip" path="res://graphics/ui/touch_ui_icons/quests_icon.png" id="5_f5vdn"]
[ext_resource type="Texture2D" uid="uid://ccwjppr5j8lfb" path="res://graphics/ui/touch_ui_icons/stats_icon.png" id="5_kl5p5"]
[ext_resource type="Texture2D" uid="uid://bjh4vn3j1ju0v" path="res://graphics/ui/touch_ui_icons/run_toggle_icon_walk.png" id="7_84hkr"]
[ext_resource type="PackedScene" uid="uid://bnxpf28wkpw5k" path="res://prefabs/ui/touch_virtual_joystick/touch_virtual_joystick.tscn" id="9_r1qor"]
[ext_resource type="Texture2D" uid="uid://csejfxibpbip0" path="res://graphics/ui/touch_ui_icons/interact_button_icon.png" id="13_i5n7g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_avr5e"]
size = Vector2(22, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xpclm"]
size = Vector2(22, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n2rau"]
size = Vector2(22, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mwjwr"]
size = Vector2(22, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ye8p1"]
size = Vector2(22, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j6amh"]
size = Vector2(96, 96)

[node name="OverworldTouchControls" type="Control"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_u8cae")
runIcon = ExtResource("2_q588r")
walkIcon = ExtResource("7_84hkr")
buttonSfx = ExtResource("4_i4ml8")
metadata/_edit_horizontal_guides_ = [528.0]
metadata/_edit_vertical_guides_ = [192.0, 1056.0]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 64)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -544.0
offset_top = 32.0
offset_right = -96.0
offset_bottom = 96.0
grow_horizontal = 0
theme_override_constants/separation = 32
alignment = 2

[node name="InventoryButtonPanel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 1

[node name="InventoryButton" type="TouchScreenButton" parent="HBoxContainer/InventoryButtonPanel"]
scale = Vector2(4, 4)
texture_normal = ExtResource("4_v8w2s")
shape = SubResource("RectangleShape2D_avr5e")

[node name="QuestsButtonPanel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 1

[node name="QuestsButton" type="TouchScreenButton" parent="HBoxContainer/QuestsButtonPanel"]
scale = Vector2(4, 4)
texture_normal = ExtResource("5_f5vdn")
shape = SubResource("RectangleShape2D_xpclm")

[node name="StatsButtonPanel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 1

[node name="StatsButton" type="TouchScreenButton" parent="HBoxContainer/StatsButtonPanel"]
scale = Vector2(4, 4)
texture_normal = ExtResource("5_kl5p5")
shape = SubResource("RectangleShape2D_n2rau")

[node name="RunToggleButtonPanel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 1

[node name="RunToggleButton" type="TouchScreenButton" parent="HBoxContainer/RunToggleButtonPanel"]
scale = Vector2(4, 4)
texture_normal = ExtResource("7_84hkr")
shape = SubResource("RectangleShape2D_mwjwr")

[node name="PauseButtonPanel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 1

[node name="PauseButton" type="TouchScreenButton" parent="HBoxContainer/PauseButtonPanel"]
scale = Vector2(4, 4)
texture_normal = ExtResource("3_12oi1")
shape = SubResource("RectangleShape2D_ye8p1")

[node name="TouchVirtualJoystick" parent="." instance=ExtResource("9_r1qor")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
offset_top = -384.0
offset_right = 500.0
grow_horizontal = 1
grow_vertical = 0

[node name="TalkControl" type="Control" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -288.0
offset_top = -256.0
offset_right = -160.0
offset_bottom = -128.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1

[node name="TalkButton" type="TouchScreenButton" parent="TalkControl"]
scale = Vector2(2, 2)
texture_normal = ExtResource("13_i5n7g")
shape = SubResource("RectangleShape2D_j6amh")

[connection signal="released" from="HBoxContainer/InventoryButtonPanel/InventoryButton" to="." method="_on_inventory_button_released"]
[connection signal="released" from="HBoxContainer/QuestsButtonPanel/QuestsButton" to="." method="_on_quests_button_released"]
[connection signal="released" from="HBoxContainer/StatsButtonPanel/StatsButton" to="." method="_on_stats_button_released"]
[connection signal="pressed" from="HBoxContainer/RunToggleButtonPanel/RunToggleButton" to="." method="_on_run_toggle_button_pressed"]
[connection signal="released" from="HBoxContainer/PauseButtonPanel/PauseButton" to="." method="_on_pause_button_released"]
[connection signal="released" from="TalkControl/TalkButton" to="." method="_on_talk_button_released"]
